--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 body {
-  background-color: rgb(245, 245, 245);
+  /* background-color: rgb(245, 245, 245); */
+  background-color: #f9f4ef;
 }
